deployment/terraform/core/microservices/traefik/device-data-service-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: device-data-service-stripprefix
  namespace: shms-microservices
spec:
  stripPrefix:
    prefixes:
      - /data
