deployment/terraform/core/microservices/traefik/ema-service-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ema-service-stripprefix
  namespace: shms-microservices
spec:
  stripPrefix:
    prefixes:
      - /ema
