deployment/terraform/core/microservices/traefik/ema-service-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ema-service-ingressroute
  namespace: shms-microservices
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/ema`)
      services:
        - name: ema-service
          port: 8000
          namespace: shms-microservices
      middlewares:
        - name: ema-service-stripprefix
