deployment/terraform/core/microservices/traefik/web-ui-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-ui-ingressroute
  namespace: shms-microservices
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - name: web-ui
          port: 3000
          namespace: shms-microservices
